[workspace]
members = ["lorelay-ble", "lorelay-lr"]
default-members = ["lorelay-ble"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
futures = { version = "0.3", default-features = false }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
[workspace.dependencies.embassy-time]
version = "*"
git = "https://github.com/embassy-rs/embassy"
features = ["defmt", "nightly", "defmt-timestamp-uptime"]
[workspace.dependencies.embassy-executor]
version = "*"
git = "https://github.com/embassy-rs/embassy"
features = ["defmt", "nightly", "integrated-timers", "arch-cortex-m", "executor-thread"]
[workspace.dependencies.embassy-sync]
version = "*"
git = "https://github.com/embassy-rs/embassy"
[workspace.dependencies.embassy-macros]
version = "*"
git = "https://github.com/embassy-rs/embassy"
