[workspace]
members = ["lorelay-ble", "lorelay-lr"]
default-members = ["lorelay-ble"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
heapless = "0.7.16"
futures = { version = "0.3", default-features = false }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
[workspace.dependencies.embassy-time]
version = "*"
git = "https://github.com/embassy-rs/embassy"
features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]
[workspace.dependencies.embassy-embedded-hal]
version = "*"
git = "https://github.com/embassy-rs/embassy"
[workspace.dependencies.embassy-executor]
version = "*"
git = "https://github.com/embassy-rs/embassy"
features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "nightly", "defmt", "integrated-timers"]
[workspace.dependencies.embassy-sync]
version = "*"
git = "https://github.com/embassy-rs/embassy"
[workspace.dependencies.embassy-macros]
version = "*"
git = "https://github.com/embassy-rs/embassy"

[profile.dev]
opt-level = "s"
debug = true

[profile.release]
opt-level = "s"
debug = true
codegen-units = 1
lto = true
