[package]
name = "lorelay-lr"
version = "0.1.0"
edition = "2021"


[dependencies]
defmt.workspace = true
defmt-rtt.workspace = true
futures.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
panic-probe.workspace = true
embassy-time.workspace = true
embassy-executor.workspace = true
embassy-sync.workspace = true
embassy-macros.workspace = true
